Obsolete/CPP-API/ZetaLib.hpp

//#############################################################################
// Typedes And Contansts 

typedef char* PCHAR ;
typedef int tINTBOOL;
typedef int tCONTROL;
typedef int tCALLBACK;
int       ZEWW_Prepare (PCHAR lpszConfigFile, tCALLBACK lpfnCreateUICallback, 
            tCALLBACK lpfnHandleEventCallback);
tINTBOOL  ZEWW_CreateWindow (int ClassRef, HINSTANCE hAppInstance, PCHAR WindowClassName,
            PCHAR WindowTitle, tCALLBACK WindowProc, DWORD WindowFlags, int iWidth, int iHeight);
void      ZEWW_Execute (int ClassRef);
void      ZEWW_Shutdown (int ClassRef);
tINTBOOL  ZEE_Initialize (PCHAR lpszConfigurationFile, HWND hHostWindow, HINSTANCE hAppInstance);
void      ZEE_Shutdown ();
void      ZEE_TerminateSelf ();
void      ZEE_Activate ();
void      ZEE_Deactivate ();
tINTBOOL  ZEE_Refresh ();
int       ZEE_ScreenWidth ();
int       ZEE_ScreenHeight ();
int       ZEE_ScreenColorDepth ();
void      ZEE_SetMusic (PCHAR lpszMusicName);
void      ZEE_ClearMusic ();
void      ZEE_PlaySound (PCHAR lpszSoundName);
void      ZEE_PlayCutScene (PCHAR lpszCutSceneFile);
tINTBOOL  ZEE_IsMusicActive ();
void      ZEE_ToggleMusic (tINTBOOL ibActive);
tINTBOOL  ZEE_IsSoundActive ();
void      ZEE_ToggleSound (tINTBOOL ibActive);
void      ZEE_ToggleFPSDisplay (tINTBOOL ibVisible);
 
tINTBOOL  ZEE_IsGlobalExitOnEscapeSet ();
void      ZEE_ToggleGlobalExitOnEscape (tINTBOOL ibActive);
tCONTROL  ZEUI_Root ();
tCONTROL  ZEUI_CreateDesktop (PCHAR lpszRefName, PCHAR lpszDeskName);
tCONTROL  ZEUI_SwitchDesktop (PCHAR lpszRefName);
tCONTROL  ZEUI_GetDesktop (PCHAR lpszRefName);
tCONTROL  ZEUI_CreateGameView (int Left, int Top, int Right, int Bottom);
tCONTROL  ZEUI_CreateControl (PCHAR lpszClassName, int Left, int Top, int Right, int Bottom);
void      ZEUI_InsertControl (tCONTROL ctlDest, tCONTROL ctlToInsert);
PCHAR     ZEUI_GetProp (tCONTROL ControlRef, PCHAR lpszPropName);
void      ZEUI_SetProp (tCONTROL ControlRef, PCHAR lpszPropName, PCHAR lpszPropValue);
void      ZEUI_ShowMsgBox (PCHAR cMessage);
void      ZEUI_ShowMsgBoxEx (PCHAR cMessage, int Left, int Top, int Right, int Bottom);
void      ZEUI_Hide (tCONTROL ControlRef);
void      ZEUI_Show (tCONTROL ControlRef);
void      ZEGE_LoadWorld (PCHAR lpszWordFile);
void      ZEGE_CreatePC (PCHAR lpszMasterName, PCHAR lpszWorkingName, tCALLBACK lpfnCallback);
void      ZEGE_ReplacePC (PCHAR lpszMasterName, PCHAR lpszWorkingName, tCALLBACK lpfnCallback);
void      ZEGE_ClearPC ();
void      ZEGE_DropPC ();
void      ZEGE_DropPCEx (PCHAR lpszAreaName, int X, int Y, int Z);
void      ZEGE_UnDropPC ();
void      ZESS_ClearCallbacks ();
void      ZESS_AddCallback (PCHAR lpszRefName, tCALLBACK lpfnCallback);
void      ZESS_TerminateEngine ();